complete lesson 8 Computer properties

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <a :href="url">More Pictures</a>
           </div>
           <div class="product-info">
-            <h1>{{ product }}</h1>
-            <p v-if="onSale">On Sale</p>
+            <h1>{{ title }}</h1>
+            <p v-if="onSale">{{ isOnSale }}</p>
             <p v-if="inventory > 10">In Stock</p>
             <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out</p>
             <p v-else>Out of Stock</p>
@@ -32,9 +32,9 @@
             </ul>
 
             <div class="color-circle" 
-            v-for="variant in variants" 
+            v-for="(variant, index) in variants" 
             :key="variant.id"
-            @mouseover="changeImage(variant.image)"
+            @mouseover="updateVariant(index)"
             :style="{ backgroundColor: variant.color}"
             >  </div>
 
